feat: add prisma

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 DATABASE_URL=postgresql://postgres:jk5807757jk580@localhost:5432/workout-app?schema=public
 ACCESS_TOKEN=FedDrfg&
+PORT=5000
