--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./server.js",
+    "start": "node ./server.js"
   },
   "keywords": [
     "workout",
@@ -14,11 +15,17 @@
   "author": "Yauheni Vial",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^4.15.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "colors": "^1.4.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.0",
+    "prisma": "^4.15.0"
   }
 }
