--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,6 @@
   "author": "Yauheni Vial",
   "license": "ISC",
   "devDependencies": {
-    "@prisma/client": "^4.15.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "colors": "^1.4.0",
     "morgan": "^1.10.0",
@@ -23,8 +22,13 @@
     "prettier": "^2.8.8"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@prisma/client": "^4.15.0",
+    "argon2": "^0.30.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "prisma": "^4.15.0"
   }
