--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon ./server.js",
-    "start": "node ./server.js"
+    "dev server": "nodemon ./server.js",
+    "start server": "node ./server.js"
   },
   "keywords": [
     "workout",
