--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -4,6 +4,15 @@
   "useTabs": true,
   "semi": false,
   "singleQuote": true,
-  "jsxSingleQuote": true,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "importOrder": [
+    "<THIRD_PARTY_MODULES>",
+    "/hooks/",
+    "/screens/",
+    "/components/",
+    "^../(.*)",
+    "^./(.*)"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
